--- a/knowledges/peft/huggingface_peft.ipynb
+++ b/knowledges/peft/huggingface_peft.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "aa071e71-623a-40f7-beba-450f1acfba48",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/root/dev/hf/diffusers/examples/triplane_diffusion'"
+       "'/root/dev/playground/knowledges/peft'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,23 +22,29 @@
    "source": [
     "import os\n",
     "\n",
-    "os.chdir(\"/root/dev/hf/diffusers/examples/triplane_diffusion\")\n",
+    "os.chdir(\"/root/dev/playground/knowledges/peft\")\n",
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "eeb09e45-4494-4617-b4f1-241410c658b6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[37m6f37a742720d              \u001b[m  Fri Apr 12 15:43:31 2024  \u001b[1m\u001b[30m525.89.02\u001b[m\n",
-      "\u001b[36m[0]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 42°C\u001b[m, \u001b[32m 20 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m 1033\u001b[m / \u001b[33m24564\u001b[m MB |\n",
-      "\u001b[36m[1]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 38°C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m   10\u001b[m / \u001b[33m24564\u001b[m MB |\n"
+      "\u001b[1m\u001b[37maa4173e0a5f2              \u001b[m  Thu May 30 21:08:10 2024  \u001b[1m\u001b[30m535.129.03\u001b[m\n",
+      "\u001b[36m[0]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 40°C\u001b[m, \u001b[1m\u001b[32m 55 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m16701\u001b[m / \u001b[33m24564\u001b[m MB |\n",
+      "\u001b[36m[1]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 48°C\u001b[m, \u001b[1m\u001b[32m 53 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m17013\u001b[m / \u001b[33m24564\u001b[m MB |\n",
+      "\u001b[36m[2]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 46°C\u001b[m, \u001b[1m\u001b[32m 91 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m18281\u001b[m / \u001b[33m24564\u001b[m MB |\n",
+      "\u001b[36m[3]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[31m 49°C\u001b[m, \u001b[1m\u001b[32m 66 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m18305\u001b[m / \u001b[33m24564\u001b[m MB |\n",
+      "\u001b[36m[4]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[1m\u001b[31m 50°C\u001b[m, \u001b[1m\u001b[32m 45 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m17927\u001b[m / \u001b[33m24564\u001b[m MB |\n",
+      "\u001b[36m[5]\u001b[m \u001b[34mNVIDIA GeForce RTX 4090\u001b[m |\u001b[1m\u001b[31m 51°C\u001b[m, \u001b[1m\u001b[32m 60 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m18163\u001b[m / \u001b[33m24564\u001b[m MB |\n"
      ]
     }
    ],
@@ -46,14 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "8f8a1154-37de-475f-8576-b1ab7bad1cec",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "torch.cuda.set_device(1)\n",
+    "torch.cuda.set_device(4)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
@@ -375,9 +385,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hf_test",
+   "display_name": "triplora",
    "language": "python",
-   "name": "hf_test"
+   "name": "triplora"
   },
   "language_info": {
    "codemirror_mode": {
