[feat] some useful tools

--- a/pathlib.ipynb
+++ b/pathlib.ipynb
@@ -36,6 +36,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c31506f1-f439-47dd-9c81-985025b74af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replacement of os.makedirs\n",
+    "from pathlib import Path\n",
+    "\n",
+    "os.makedirs(example_path, exist_ok=True)\n",
+    "Path(example_path).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "6b8a0e69-5bb6-417d-8926-819b5de44ddb",
    "metadata": {
@@ -53,8 +67,6 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "data_dir = Path(\"/root/dev/DanceGen/dataset/AIST/aistpp\")\n",
     "wave_dir = Path(data_dir / \"wavs\")\n",
     "motion_dir = Path(data_dir / \"motions\")\n",
@@ -144,6 +156,28 @@
    "metadata": {},
    "source": [
     "# Handling Data Structures with pathlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3c5eabd-d906-423d-9a0d-f1523bc8fd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of replacement of os.listdir\n",
+    "for file in os.listdir(label_dir):\n",
+    "    name = file.split(\".\")[0]\n",
+    "    jsonfile = os.path.join(label_dir, file)\n",
+    "    with open(jsonfile,\"r\") as f:\n",
+    "        genredict = json.load(f)\n",
+    "    genre = genredict['style2']\n",
+    "\n",
+    "for file in label_dir.iterdir():  # Iterate over Path objects in the directory\n",
+    "    name = file.stem  # Get the file name without extension\n",
+    "    with file.open(\"r\") as f:  # Open the file\n",
+    "        genredict = json.load(f)\n",
+    "    genre = genredict['style2']"
    ]
   },
   {
@@ -300,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
